docs/css/devdocs.css
code {
  /* Make inline source code at least as big as surrounding text */
  font-size: 1.1em;
}

div.document {
  flex-direction: row-reverse;
}

div.sphinxsidebar {
  float: unset;
  width: unset;
  margin-left: unset;
  word-wrap: unset;
  overflow-wrap: unset;
  display: unset;
  flex: unset;
}

body > div.document > div.sphinxsidebar > div > p > a > img {
  max-width: 215px;
}

div.bodywrapper {
  margin: unset;
  display: unset;
}

/* Code comments */
span.cm {
  color: #397989; /* default #408090 has 4.3:1 contrast ratio; this has 4.8:1 */
}

/* Python string interpolation */
span.si {
  color: #2E527A; /* Personally I think this is worse but some robot disagrees */
}

